vrijdag gedaan werk

--- a/index.html
+++ b/index.html
@@ -10,52 +10,61 @@
 
     <body>
         <header>
-            <h1>Sela van Vreeswijk</h1>
-            <h2>Personal Website</h2>
+            <!-- H1 Data van de API-->
 
-            <!-- <p>Open Archive ↓</p> -->
+            <h2>About Me</h2>
         </header>
 
         <main>
+            <div class="statisch">
+                <h4>Feb 2026</h4>
+
+                <h4>Minor Web Development</h4>
+            </div>
+
             <div class="container">
+
                 <article class="folder-1"> 
                     <p>Stats</p> <!--Label-->
                     
                     <section>
-                        <h2>Statestieken</h2> <!--Data van de API-->
+                        <h3>Data</h3> 
 
-                        <ul>
-                            <li>Naam: Sela van Vreeswijk</li>
-                            <li>Woonplaats: Amsterdam</li>
-                            <li>Geslacht: Vrouw</li>
-                        </ul>
+                        <ul></ul> <!--Data van de API-->
                     </section>
                 </article>
 
                 <article class="folder-2"> 
-                    <p>Interesting Facts</p> <!--Label-->
+                   <p>Words</p> <!--Label-->
 
                     <section>
-                        <h2>Interesting Facts</h2> 
+                        <h3>Things that describe me</h3> 
 
-                         <ul>
-                            <li>Mango lievelingsfruit</li>
-                            <li>Loopt graag hard</li>
-                            <li>Slaapt graag genoeg</li>
+                        <ul>
+                            <li>Cycling</li>
+                            <li>Sudoku</li>
+                            <li>Writing</li>
+                            <li>Nature</li>
+                            <li>Films</li>
+                            <li>Mountains</li>
+                            <li>Eating Healthy</li>
+                            <li>Reading</li>
                         </ul>
                     </section>
                 </article>
 
                 <article class="folder-3"> 
-                    <p>Hobby's</p> <!--Label-->
+                     <p>Interesting Facts</p> <!--Label-->
 
                     <section>
-                        <h2>Sela's Hobby's</h2> 
+                        <h3>Did you know?</h3> 
 
-                        <ul>
-                            <li>Hardlopen</li>
-                            <li>Films kijken</li>
-                            <li>Sudoku masteren</li>
+                         <ul>
+                            <li>Mango is my favorite fruit</li>
+                            <li>Courgette is my favorite vegetable</li>
+                            <li>I love soup</li>
+                            <li>I love going to bed on time</li>
+                            <li>I use the word 'fantastic' a lot</li>
                         </ul>
                     </section>
                 </article>
