na foto's index change

--- a/index.html
+++ b/index.html
@@ -98,51 +98,51 @@
                     <!-- <h4>Pictures that describe me</h4> -->
 
                     <div class="img-wrapper slower">
-                        <img src="./images/nature6.png" alt="Picture of author">
+                        <img src="./images/crozon-hike.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper faster">
-                        <img src="./images/ik4.png" alt="Picture of author">
+                        <img src="./images/london.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper slower vertical">
-                        <img src="./images/nature3.png" alt="Picture of author">
+                        <img src="./images/guesthouse.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper slower slower-down">
-                        <img src="./images/ik13.png" alt="Picture of author">
+                        <img src="./images/teth.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper">
-                        <img src="./images/nature7.jpg" alt="Picture of author">
+                        <img src="./images/crozon2.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper slower">
-                        <img src="./images/ik6.png" alt="Picture of author">
+                        <img src="./images/seven-sisters.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper faster1">
-                        <img src="./images/zee.jpg" alt="Picture of author">
+                        <img src="./images/cacti.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper faster1">
-                        <img src="./images/zee.jpg" alt="Picture of author">
+                        <img src="./images/tenerife.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper slower2">
-                        <img src="./images/zee.jpg" alt="Picture of author">
+                        <img src="./images/outfit.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper">
-                        <img src="./images/zee.jpg" alt="Picture of author">
+                        <img src="./images/perzik.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper slower">
-                        <img src="./images/zee.jpg" alt="Picture of author">
+                        <img src="./images/wes-anderson.jpg" alt="Picture of author">
                     </div>
 
                     <div class="img-wrapper slower last">
-                        <img src="./images/zee.jpg" alt="Picture of author">
+                        <img src="./images/albanian-sun.jpg" alt="Picture of author">
                     </div>
                 </div>
             </div>
