laatste voor vandaag

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h2>My name is Sela</h2>
 
                     <p>
-                        Like many teenagers, I once had to choose what I wanted to study. With so many options, I felt overwhelmed and unsure. 
+                        Like many adolescents, I once had to choose what I wanted to study. With so many options, I felt overwhelmed and unsure. 
                         So, I decided to take a few gap years to explore myself and life. You can see a part of what I discovered in the folders above and pictures that follow.
                         During my time for life, one thing slowly became clear: I wanted to build websites.
                     </p>
@@ -149,7 +149,7 @@
             <section class="classmates">  <!--Section API classmates-->
                 <h3>Friends I'm doing this minor with</h3>
 
-                <div>
+                <div class="classmate-item">
                     <ul id="person-305"> <!--Luna--> </ul>
 
                     <ul id="person-298"> <!--Joshua--> </ul>
