--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Website</title>
         <link href="./css/styles.css" rel="stylesheet">
-        <link rel="icon" href="./images/favicon.jpg"> 
+        <link rel="icon" href="./images/zee.jpg"> 
     </head>
 
-    <body>
-        <a id="top"></a>
-
+    <body id="top">
         <header>
             <h1 id="person-321-name"><!--Data API--></h1>
         </header>
 
         <main>
             <div class="static">
-                <h5>Feb 2026</h5>
+                <h2>Feb 2026</h2>
 
-                <h5 class="theme-toggle">Minor Web Development</h5>
+                <h2 class="theme-toggle">Minor Web Development</h2>
             </div>
 
             <div class="container">
                 <article class="folder-1"> 
-                    <p>Stats</p>
+                    <h3>Stats</h3>
                     
                     <section>
                         <h4>Data</h4> 
@@ -34,7 +32,7 @@
                 </article>
 
                 <article class="folder-2"> 
-                   <p>Words</p> 
+                   <h3>Words</h3> 
 
                     <section>
                         <h4>Things that describe me</h4> 
@@ -53,7 +51,7 @@
                 </article>
 
                 <article class="folder-3"> 
-                     <p>Interesting Facts</p> 
+                     <h3>Interesting Facts</h3> 
 
                     <section>
                         <h4>Did you know?</h4> 
@@ -62,21 +60,21 @@
                             <li>Mango is my favorite fruit</li>
                             <li>Courgette is my favorite vegetable</li>
                             <li>I love soup</li>
-                            <li>I love going to bed on time</li>
                             <li>I use the word 'fantastic' a lot</li>
+                            <li>I love going to bed on time</li>
                         </ul>
                     </section>
                 </article>
             </div>
 
-            <section class="about-me"> <!--Sectin about me with picture-->
+            <section class="about-me"> <!--Section about me met foto-->
                 <div>
-                    <h2>My name is Sela</h2>
+                    <h3>My name is Sela</h3>
 
                     <p>
                         Like many adolescents, I once had to choose what I wanted to study. With so many options, I felt overwhelmed and unsure. 
                         So, I decided to take a few gap years to explore myself and life. You can see a part of what I discovered in the folders above and pictures that follow.
-                        During my time for life, one thing slowly became clear: I wanted to build websites.
+                        During that time, one thing slowly became clear: I wanted to build websites.
                     </p>
 
                     <p>
@@ -93,68 +91,68 @@
                 <img src="./images/zee.jpg" alt="Picture of author">
             </section>
 
-            <!--Section pictures about me -->
-            <!--Bron inspiratie: https://codepen.io/Sela-van-Vreeswijk/pen/GgqwRBm?editors=1000-->
+            <!--Sectie horizontale scroll -->
+            <!--Source: https://codepen.io/Sela-van-Vreeswijk/pen/GgqwRBm?editors=1000-->
 
             <div class="horizontal-scroll-wrapper"> 
-                <div class="img-wrapper slower">
+                <figure class="img-wrapper slower">
                     <img src="./images/crozon-hike.jpg" alt="A Hike in Crozon, France">
-                </div>
+                </figure>
 
-                <div class="img-wrapper faster">
+                <figure class="img-wrapper faster">
                     <img src="./images/london.jpg" alt="A walk in nature in London">
-                </div>
+                </figure>
 
-                <div class="img-wrapper slower vertical">
+                <figure class="img-wrapper slower vertical">
                     <img src="./images/guesthouse.jpg" alt="A guesthouse in Albania">
-                </div>
+                </figure>
 
-                <div class="img-wrapper slower slower-down">
+                <figure class="img-wrapper slower slower-down">
                     <img src="./images/teth.jpg" alt="A hike in Teth, Albania">
-                </div>
+                </figure>
 
-                <div class="img-wrapper">
+                <figure class="img-wrapper neutral">
                     <img src="./images/crozon2.jpg" alt="A beach in Crozon, France">
-                </div>
+                </figure>
 
-                <div class="img-wrapper slower">
+                <figure class="img-wrapper slower">
                     <img src="./images/seven-sisters.jpg" alt="Picture of author at Seven Sisters, England">
-                </div>
+                </figure>
 
-                <div class="img-wrapper faster1">
+                <figure class="img-wrapper faster1">
                     <img src="./images/cacti.jpg" alt="A cactus">
-                </div>
+                </figure>
 
-                <div class="img-wrapper faster1">
+                <figure class="img-wrapper faster1">
                     <img src="./images/tenerife.jpg" alt="A sea and houses in Tenerife">
-                </div>
+                </figure>
 
-                <div class="img-wrapper slower2">
+                <figure class="img-wrapper slower2">
                     <img src="./images/outfit.jpg" alt="A picture of an outfit">
-                </div>
+                </figure>
 
-                <div class="img-wrapper">
+                <figure class="img-wrapper neutral">
                     <img src="./images/perzik.jpg" alt="Two peaches in a hand">
-                </div>
+                </figure>
 
-                <div class="img-wrapper slower">
+                <figure class="img-wrapper slower">
                     <img src="./images/wes-anderson.jpg" alt="A Wes Anderson exhibition">
-                </div>
+                </figure>
 
-                <div class="img-wrapper slower last">
+                <figure class="img-wrapper slower last">
                     <img src="./images/albanian-sun.jpg" alt="An Albanian sunset">
-                </div>
+                </figure>
             </div>
 
-            <section class="classmates">  <!--Section API classmates-->
+            <section class="classmates">  <!--Sectie API klasgenoten-->
                 <h3>Friends I'm doing this minor with</h3>
 
                 <div class="classmate-item">
-                    <ul id="person-305"> <!--Luna--> </ul>
+                    <ul id="person-305"></ul>
 
-                    <ul id="person-298"> <!--Joshua--> </ul>
+                    <ul id="person-298"></ul>
 
-                    <ul id="person-291"> <!--Iris--> </ul>
+                    <ul id="person-291"></ul>
                 </div>
             </section>
 
